添加变量显示

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -31,7 +31,7 @@ rewards:
 
     # 奖励的显示名称，可以是任意字符串
     # 可以在commands 中使用 %(name) 来获取该奖励的名称
-    # 也可以使用变量 %TimeReward_<奖励ID>_name% 来获取对应奖励的名称
+    # 也可以使用变量 %TimeReward_reward_<奖励ID>% 来获取对应奖励的名称
     name: "&f[初级奖励] &e总在线时长 2小时"
 
     # 该奖励自动领取需要的在线时长，单位为秒
