修改依赖方式

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,6 +8,9 @@ website: ${project.url}
 authors:
   - CarmJos
 
+softdepend:
+  - PlaceholderAPI
+
 commands:
   "TimeReward":
     permission: "TimeReward.admin"
