--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -20,5 +20,5 @@ commands:
 permissions:
 
   "TimeReward.admin":
-    description: "区域保护插件的管理员权限。"
+    description: "在线自动领奖的管理员权限。"
     default: op
