缩小成品jar大小

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,7 @@
                 <configuration>
                     <finalName>${project.name}-${project.version}</finalName>
                     <outputDirectory>${project.basedir}/asset</outputDirectory>
+                    <minimizeJar>true</minimizeJar>
                     <relocations>
                         <relocation>
                             <pattern>cc.carm.lib</pattern>
