--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,15 +24,21 @@ jobs:
           server-id: github
           server-username: MAVEN_USERNAME
           server-password: MAVEN_TOKEN
+
       - name: "Package"
         run: mvn -B package --file pom.xml -Dmaven.javadoc.skip=true
         env:
           MAVEN_USERNAME: ${{ github.repository_owner }}
           MAVEN_TOKEN: ${{secrets.GITHUB_TOKEN}}
-      - name: "Target Stage"
-        run: mkdir staging && cp asset/*.jar staging
+
+      - name: "Target Staging"
+        run: |
+          mkdir artifacts
+          cp -vrf target/ artifacts/target/
+          cp -vrf asset/*.jar artifacts
+
       - name: "Upload artifact"
         uses: actions/upload-artifact@v2
         with:
           name: Artifact
-          path: staging
+          path: artifacts
