--- a/pom.xml
+++ b/pom.xml
@@ -14,13 +14,17 @@
 
     <groupId>cc.carm.plugin</groupId>
     <artifactId>timereward</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <name>TimeReward</name>
     <description>区域保护插件，将不符合条件的玩家弹出区域，基于EasyPlugin实现。</description>
     <url>https://github.com/CarmJos/TimeReward</url>
 
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/CarmJos/TimeReward/issues</url>
+    </issueManagement>
 
     <ciManagement>
         <system>GitHub Actions</system>
@@ -31,6 +35,14 @@
         <downloadUrl>https://github.com/CarmJos/TimeReward/releases</downloadUrl>
     </distributionManagement>
 
+    <developers>
+        <developer>
+            <id>CarmJos</id>
+            <name>Carm Jos</name>
+            <email>carm@carm.cc</email>
+            <url>https://work.carm.cc</url>
+        </developer>
+    </developers>
 
     <repositories>
 
@@ -81,9 +93,25 @@
             <artifactId>easyplugin-configuration</artifactId>
             <version>${easyplugin.version}</version>
             <scope>compile</scope>
-
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>cc.carm.lib</groupId>
+            <artifactId>githubreleases4j</artifactId>
+            <version>1.3.1</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>3.0.0</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
 
         <dependency>
             <groupId>org.spigotmc</groupId>
@@ -105,6 +133,7 @@
             <version>2.10.9</version>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>junit</groupId>
@@ -207,7 +236,15 @@
                     <relocations>
                         <relocation>
                             <pattern>cc.carm.lib</pattern>
-                            <shadedPattern>cc.carm.plugin.timereward.lib</shadedPattern>
+                            <shadedPattern>cc.carm.plugin.moeteleport.lib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <shadedPattern>cc.carm.plugin.moeteleport.lib.bstats</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>org.json</pattern>
+                            <shadedPattern>cc.carm.plugin.moeteleport.lib.json</shadedPattern>
                         </relocation>
                     </relocations>
                     <filters>
