--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,6 +5,16 @@ version: ${project.version}
 
 debug: false
 
+# 统计数据设定
+# 该选项用于帮助开发者统计插件版本与使用情况，且绝不会影响性能与使用体验。
+# 当然，您也可以选择在这里关闭，或在plugins/bStats下的配置文件中关闭。
+metrics: true
+
+# 检查更新设定
+# 该选项用于插件判断是否要检查更新，若您不希望插件检查更新并提示您，可以选择关闭。
+# 检查更新为异步操作，绝不会影响性能与使用体验。
+check-update: true
+
 
 database:
   # 数据库驱动路径，默认为 MySQL
