--- a/pom.xml
+++ b/pom.xml
@@ -5,20 +5,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <properties>
-        <java.version>8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <easyplugin.version>1.3.9</easyplugin.version>
-        <easysql.version>0.3.8</easysql.version>
+        <project.jdk.version>8</project.jdk.version>
+        <maven.compiler.source>${project.jdk.version}</maven.compiler.source>
+        <maven.compiler.target>${project.jdk.version}</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+        
+        <deps.easyplugin.version>1.5.2</deps.easyplugin.version>
+        <deps.easysql.version>0.4.6</deps.easysql.version>
+        <deps.mineconfig.version>2.3.3</deps.mineconfig.version>
     </properties>
 
     <groupId>cc.carm.plugin</groupId>
     <artifactId>timereward</artifactId>
     <version>1.3.0</version>
-    <packaging>jar</packaging>
 
     <name>TimeReward</name>
-    <description>区域保护插件，将不符合条件的玩家弹出区域，基于EasyPlugin实现。</description>
+    <description>在线时长自动领奖插件，通过指令发放奖励，基于EasyPlugin实现。</description>
     <url>https://github.com/CarmJos/TimeReward</url>
 
     <issueManagement>
@@ -31,10 +34,6 @@
         <url>https://github.com/CarmJos/TimeReward/actions/workflows/maven.yml</url>
     </ciManagement>
 
-    <distributionManagement>
-        <downloadUrl>https://github.com/CarmJos/TimeReward/releases</downloadUrl>
-    </distributionManagement>
-
     <developers>
         <developer>
             <id>CarmJos</id>
@@ -45,15 +44,20 @@
     </developers>
 
     <repositories>
-
+        <repository>
+            <id>carm-repo</id>
+            <name>Carm's Repo</name>
+            <url>https://repo.carm.cc/repository/maven-public/</url>
+        </repository>
+    
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/CarmJos/*</url>
+            <url>https://maven.pkg.github.com/CarmJos/${project.name}</url>
         </repository>
 
         <repository>
-            <id>central</id>
+            <id>maven-central</id>
             <url>https://repo1.maven.org/maven2/</url>
         </repository>
 
@@ -61,45 +65,62 @@
             <id>nexus</id>
             <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
-
-        <repository>
-            <id>carm-repo</id>
-            <name>Carm's Repo</name>
-            <url>https://repo.carm.cc/repository/maven-public/</url>
-        </repository>
-
     </repositories>
+    
+    <distributionManagement>
+        <downloadUrl>https://github.com/CarmJos/TimeReward/releases</downloadUrl>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/CarmJos/${project.name}</url>
+        </repository>
+    </distributionManagement>
 
     <dependencies>
-
         <dependency>
             <groupId>cc.carm.lib</groupId>
-            <artifactId>easysql-beecp</artifactId>
-            <version>${easysql.version}</version>
+            <artifactId>mineconfiguration-bukkit</artifactId>
+            <version>${deps.mineconfig.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-
+    
         <dependency>
             <groupId>cc.carm.lib</groupId>
             <artifactId>easyplugin-main</artifactId>
-            <version>${easyplugin.version}</version>
+            <version>${deps.easyplugin.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-
+    
         <dependency>
             <groupId>cc.carm.lib</groupId>
-            <artifactId>easyplugin-configuration</artifactId>
-            <version>${easyplugin.version}</version>
+            <artifactId>easyplugin-command</artifactId>
+            <version>${deps.easyplugin.version}</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-
+    
         <dependency>
             <groupId>cc.carm.lib</groupId>
-            <artifactId>githubreleases4j</artifactId>
-            <version>1.3.1</version>
+            <artifactId>easyplugin-githubchecker</artifactId>
+            <version>${deps.easyplugin.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+    
+        <dependency>
+            <groupId>cc.carm.lib</groupId>
+            <artifactId>easysql-beecp</artifactId>
+            <version>${deps.easysql.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+    
+        <dependency>
+            <groupId>de.themoep</groupId>
+            <artifactId>minedown</artifactId>
+            <version>1.7.1-SNAPSHOT</version>
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
@@ -111,8 +132,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-
-
+        
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -121,19 +141,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-
-        <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.9</version>
+            <version>2.11.2</version>
             <scope>provided</scope>
         </dependency>
-
 
         <dependency>
             <groupId>junit</groupId>
@@ -145,14 +157,15 @@
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>23.0.0</version>
+            <version>24.0.0</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
 
     <build>
+        <defaultGoal>clean package</defaultGoal>
+        
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -177,30 +190,25 @@
                     </filesets>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                </configuration>
-            </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.10.0</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>${project.jdk.version}</source>
+                    <target>${project.jdk.version}</target>
                     <encoding>UTF-8</encoding>
                     <compilerArgument>-parameters</compilerArgument>
                 </configuration>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -214,29 +222,40 @@
                     </execution>
                 </executions>
             </plugin>
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.3</version>
+                <version>3.2.4</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
-                        <configuration>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
                     <finalName>${project.name}-${project.version}</finalName>
-                    <outputDirectory>${project.basedir}/asset</outputDirectory>
-                    <minimizeJar>true</minimizeJar>
+                    <outputDirectory>${project.basedir}/asset/</outputDirectory>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                                <exclude>META-INF/*.txt</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>
                     <relocations>
                         <relocation>
                             <pattern>cc.carm.lib</pattern>
                             <shadedPattern>cc.carm.plugin.timereward.lib</shadedPattern>
+                        </relocation>
+                        <relocation>
+                            <pattern>de.themoep.minedown</pattern>
+                            <shadedPattern>cc.carm.plugin.moeteleport.lib.minedown</shadedPattern>
                         </relocation>
                         <relocation>
                             <pattern>org.bstats</pattern>
@@ -247,18 +266,19 @@
                             <shadedPattern>cc.carm.plugin.timereward.lib.json</shadedPattern>
                         </relocation>
                     </relocations>
-                    <filters>
-                        <filter>
-                            <artifact>*:*</artifact>
-                            <excludes>
-                                <exclude>META-INF/MANIFEST.MF</exclude>
-                                <exclude>META-INF/*.txt</exclude>
-                            </excludes>
-                        </filter>
-                    </filters>
+                </configuration>
+            </plugin>
+    
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
         </plugins>
+        
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
