--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,12 @@
         
         <deps.easyplugin.version>1.5.2</deps.easyplugin.version>
         <deps.easysql.version>0.4.6</deps.easysql.version>
-        <deps.mineconfig.version>2.3.3</deps.mineconfig.version>
+        <deps.mineconfig.version>2.4.0</deps.mineconfig.version>
     </properties>
 
     <groupId>cc.carm.plugin</groupId>
     <artifactId>timereward</artifactId>
-    <version>1.3.0</version>
+    <version>2.0.0</version>
 
     <name>TimeReward</name>
     <description>在线时长自动领奖插件，通过指令发放奖励，基于EasyPlugin实现。</description>
@@ -100,7 +100,16 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-    
+
+        <dependency>
+            <groupId>cc.carm.lib</groupId>
+            <artifactId>easyplugin-placeholderapi</artifactId>
+            <version>${deps.easyplugin.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
+        <!--suppress VulnerableLibrariesLocal -->
         <dependency>
             <groupId>cc.carm.lib</groupId>
             <artifactId>easyplugin-githubchecker</artifactId>
