--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
         <maven.compiler.target>${project.jdk.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
-        
-        <deps.easyplugin.version>1.5.5</deps.easyplugin.version>
+
+        <deps.easyplugin.version>1.5.7</deps.easyplugin.version>
         <deps.easysql.version>0.4.7</deps.easysql.version>
         <deps.mineconfig.version>2.8.0</deps.mineconfig.version>
     </properties>
@@ -49,7 +49,7 @@
             <name>Carm's Repo</name>
             <url>https://repo.carm.cc/repository/maven-public/</url>
         </repository>
-    
+
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
@@ -66,7 +66,7 @@
             <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
     </repositories>
-    
+
     <distributionManagement>
         <downloadUrl>https://github.com/CarmJos/TimeReward/releases</downloadUrl>
         <repository>
@@ -84,7 +84,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-    
+
         <dependency>
             <groupId>cc.carm.lib</groupId>
             <artifactId>easyplugin-main</artifactId>
@@ -92,7 +92,15 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-    
+
+        <dependency>
+            <groupId>cc.carm.lib</groupId>
+            <artifactId>easyplugin-user</artifactId>
+            <version>${deps.easyplugin.version}</version>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+
         <dependency>
             <groupId>cc.carm.lib</groupId>
             <artifactId>easyplugin-command</artifactId>
@@ -117,7 +125,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-    
+
         <dependency>
             <groupId>cc.carm.lib</groupId>
             <artifactId>easysql-beecp</artifactId>
@@ -125,7 +133,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-    
+
         <dependency>
             <groupId>de.themoep</groupId>
             <artifactId>minedown</artifactId>
@@ -141,7 +149,7 @@
             <scope>compile</scope>
             <optional>true</optional>
         </dependency>
-        
+
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
@@ -174,7 +182,7 @@
 
     <build>
         <defaultGoal>clean package</defaultGoal>
-        
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -199,7 +207,7 @@
                     </filesets>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -211,13 +219,13 @@
                     <compilerArgument>-parameters</compilerArgument>
                 </configuration>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -231,7 +239,7 @@
                     </execution>
                 </executions>
             </plugin>
-            
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -277,7 +285,7 @@
                     </relocations>
                 </configuration>
             </plugin>
-    
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -287,7 +295,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        
+
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
