ci: 更新构建结构

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           mkdir artifacts
           cp -vrf target/ artifacts/target/
-          cp -vrf asset/*.jar artifacts
+          cp -vrf .asset/*.jar artifacts
 
       - name: "Upload artifact"
         uses: actions/upload-artifact@v4
